fix: manually truncate and display 180chars of card summary text

--- a/html/themes/custom/common_design_subtheme/components/gho-article-card/gho-article-card.css
+++ b/html/themes/custom/common_design_subtheme/components/gho-article-card/gho-article-card.css
@@ -73,7 +73,7 @@
 }
 
 /* Text summary */
-.gho-article-card .field--name-field-summary {
+.gho-article-card__summary {
   margin: 1.875rem 0 2.25rem;
   padding: 0 var(--gho-article-card-padding);
   font-size: 1rem;
